--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@ weight: 8
 ---
 
 
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mleagkar" method="post">
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mvojjynr" method="post">
     <fieldset id="fs-frm-inputs">
       <label for="full-name">Full Name</label>
       <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
